# GitPeek

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  DOCKER_POETRY_SETUP.md  DOCKER_QUICKSTART.md  GET_STARTED.md  LICENSE  Makefile  OAUTH_SETUP.md  POETRY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
.github/workflows/: build.yml  deploy.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  auth.py  public.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  github_service.py
backend/app/tests/: __init__.py  conftest.py  test_auth_service.py  test_cache_service.py  test_github_service.py  test_routes.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityChart.tsx  CommitList.tsx  Header.tsx  Layout.tsx  RepositoryList.tsx  SearchBar.tsx  UserStats.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Spinner.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AuthCallback.tsx  Home.tsx  NotFound.tsx
frontend/src/tests/: Button.test.tsx  Home.test.tsx  SearchBar.test.tsx  setup.ts  utils.test.ts
