[tool.poetry]
name = "gitpeek-backend"
version = "1.0.0"
description = "GitPeek backend API"
authors = ["GitPeek Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"
httpx = "0.26.0"
authlib = "1.3.0"
itsdangerous = "2.1.2"
python-multipart = "0.0.6"
sqlalchemy = "2.0.25"
aiosqlite = "0.19.0"
redis = "5.0.1"
requests-cache = "1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

